Don't try to print NULL values

This causes crashes on Solaris.

See https://bugzilla.gnome.org/show_bug.cgi?id=494817